--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "devStart":"nodemon server.js"
+    "start": "nodemon server.js"
   },
   "repository": {
     "type": "git",
@@ -18,11 +18,14 @@
   },
   "homepage": "https://github.com/AnuragB123/COMP313-Software-Prohect#readme",
   "dependencies": {
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "mongoose": "^6.2.1"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.2",
     "nodemon": "^2.0.15"
   }
 }
