--- a/package.json
+++ b/package.json
@@ -18,11 +18,16 @@
   },
   "homepage": "https://github.com/AnuragB123/COMP313-Software-Prohect#readme",
   "dependencies": {
+    "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.2",
-    "mongoose": "^6.2.1"
+    "express-session": "^1.17.2",
+    "mongoose": "^6.2.1",
+    "passport": "^0.5.2",
+    "passport-local-mongoose": "^6.1.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
