--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "ejs": "^3.1.6",
     "express": "^4.17.2",
     "express-session": "^1.17.2",
+    "flash": "^1.1.0",
     "mongoose": "^6.2.1",
     "mongoose-unique-validator": "^3.0.0",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
-    "passport-local-mongoose": "^6.1.0"
+    "passport-local-mongoose": "^6.1.0",
+    "session": "^0.1.0"
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
