--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "flash": "^1.1.0",
+    "materialize-css": "^1.0.0-rc.2",
     "mongoose": "^6.2.1",
     "mongoose-unique-validator": "^3.0.0",
     "passport": "^0.5.2",
