--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "type": "git",
     "url": "git+https://github.com/AnuragB123/COMP313-Software-Prohect.git"
   },
-  "author": "",
+  "author": "Arpit",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/AnuragB123/COMP313-Software-Prohect/issues"
@@ -26,6 +26,7 @@
     "express": "^4.17.2",
     "express-session": "^1.17.2",
     "mongoose": "^6.2.1",
+    "mongoose-unique-validator": "^3.0.0",
     "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^6.1.0"
