--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/AnuragB123/COMP313-Software-Prohect#readme",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "connect-ensure-login": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
