--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "nodemon server.js"
   },
   "repository": {
@@ -37,6 +37,7 @@
   },
   "devDependencies": {
     "@types/cookie-parser": "^1.4.2",
+    "mocha": "^9.2.2",
     "nodemon": "^2.0.15"
   }
 }
